--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <script src="src/data/movielist.js"></script>
         <script src="compiled/src/components/App.js"></script>
         <script src="compiled/src/components/DisplayMovie.js"></script>
+        <script src="compiled/src/components/SearchMovie.js"></script>
+        <script src="compiled/src/components/Movie.js"></script>
         <script src="compiled/src/index.js"></script>
     </body>
 </html>
