--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="compiled/src/components/App.js"></script>
         <script src="compiled/src/components/DisplayMovie.js"></script>
         <script src="compiled/src/components/SearchMovie.js"></script>
+        <script src="compiled/src/components/Add.js"></script>
         <script src="compiled/src/components/Movie.js"></script>
         <script src="compiled/src/index.js"></script>
     </body>
